[package]
name = "keys"
description = "Keyboard layer manager."
version = "0.2.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
clap = { version = "4.3.0", features = [ "derive", "cargo" ] }
futures-core = "0.3.28"
futures-util = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = [ "full" ] }
tokio-stream = "0.1.14"
